<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/content_description_for_internet_not_connected"
        android:src="@drawable/ic_no_internet_connection"
        app:tint="@color/mirage_dark" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/header_oops"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/mirage_dark"
        android:textSize="70sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subheader_no_internet_connection"
        android:textSize="40sp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/mirage_dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error_advice"
        android:textSize="30sp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="23dp"
        android:textAlignment="center"
        android:fontFamily="@font/spinnaker"
        android:textColor="@color/mirage_dark"/>

    <Button
        android:id="@+id/ce_retry"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/mirage_dark"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/btn_text"
        android:textColor="@color/white"
        android:textSize="30sp" />

</LinearLayout>